overflow fix

--- a/scss/control.scss
+++ b/scss/control.scss
@@ -41,7 +41,6 @@
 	border-collapse: separate;
 	height: $select-input-height;
 	outline: none;
-	overflow: hidden;
 	position: relative;
 	width: 100%;
 	min-height: 72px;
